# patient-journey-sql-mart

./: .gitignore  README.md  pyproject.toml
data/: README.md
docs/: data_dictionary.md  mart_design.md
sql/: 01_schema.sql  02_mart.sql  03_analytics.sql
src/patient_journey_sql_mart/: __init__.py  config.py  data.py  database.py  quality.py  reporting.py
tests/: test_data.py  test_mart.py
