[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patient-journey-sql-mart"
version = "0.1.0"
description = "A professional Python and SQL healthcare mart for longitudinal patient journey analytics."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Healthtech Portfolio" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

